<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="userDocument">Пользовательское соглашение</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="YPurl" translatable="false">https://practicum.yandex.ru/</string>
    <string name="mailto_mymail" translatable="false">mailto:corpseofpig@mail.ru</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer_uri" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="not_loaded">Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="you_have_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="play_clicked" translatable="false">Нажата кнопка Play</string>
    <string name="added_to_liked" translatable="false">%1$s добавлен в Понравившиеся</string>
    <string name="added_to_library" translatable="false">%1$s добавлен в библиотеку</string>
    <string name="mediateka">Медиатека</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mediateka_empty">Ваша медиатека пуста</string>
    <string name="no_play_list">Вы не создали\nни одного плейлиста</string>
    <string name="new_play_list">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="add_to_play_list">Добавить в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_created">Плейлист создан</string>
    <string name="stop_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Завершить</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="track_is_already_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="playlist_no_tracks">В плейлист еще не добавлен ни один трек</string>
    <string name="playlist_share">Поделиться плейлистом</string>
    <string name="info_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="No">Нет</string>
    <string name="Yes">Да</string>
    <string name="isDeletePlaylist">Хотите удалить плейлист?</string>
    <string name="noPlaylistToShare">В этом плейлисте нет треков, которыми можно поделиться</string>
    <string name="isDeleteTrack">Хотите удалить трек?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>