<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/std_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/textMainStyle"
        android:text="@string/title" />

    <Button
        android:id="@+id/search_button"
        style="@style/ButtonMainStyle"
        android:text="@string/search"
        app:icon="@drawable/search"/>

    <Button
        android:id="@+id/library_button"
        style="@style/ButtonMainStyle"
        android:text="@string/media"
        app:icon="@drawable/library"/>

    <Button
        android:id="@+id/settings_button"
        style="@style/ButtonMainStyle"
        android:text="@string/setting"
        app:icon="@drawable/settings"/>





</LinearLayout>